Refactor: 카테고리 답변 업데이트 로직 변경